# xtquant-mcp

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
configs/: data_gateway.example.yaml  trade_gateway.example.yaml  trade_gateway.flow_smoke.yaml
docs/: ACCEPTANCE_STANDARD.md  CURRENT_STATUS.md  DESIGN_REVIEW_20260327.md  EXECUTION_AND_ARTIFACT_STANDARD.md  FIRST_WAVE_TASK_BREAKDOWN.md  MCP_DESIGN.md  OPERATIONS_RUNBOOK.md  OPS-001_ARTIFACT_DISPOSITION.md  SESSION_PLAN_DECISION_LOG.md  SUPERPOWERS_PRACTICAL_GUIDE.md  TEMPLATES.md  VAL-003_G4_EXECUTION_PLAN.md  WORKFLOW_AND_BOARD.md
scripts/: bootstrap_runtime.ps1  check_packet_readiness.ps1  controller_direct_host_recovery.py  login_miniqmt.py  pwsh_utf8.sh  run_controller_direct_test.ps1  run_data_gateway_http.py  run_trade_flow_smoke.py  run_trade_gateway_http.py  run_trade_write_authority_check.ps1  verify_xtquant_bundle.py  wake_data_gateway.ps1  wake_miniqmt.ps1  wake_trade_gateway.ps1
tests/: test_bundle_and_config.py  test_bundle_and_scripts.py  test_controller_direct_host_recovery.py  test_controller_direct_host_recovery_script.py  test_controller_packet_readiness_script.py  test_data_gateway_config.py  test_data_gateway_server.py  test_data_gateway_service.py  test_http_transport.py  test_market_data_tick_payload.py  test_miniqmt_desktop_harness.py  test_miniqmt_login_service.py  test_runtime_support.py  test_spec_task_harness.py  test_trade_flow_smoke.py  test_trade_gateway_bootstrap.py  test_trade_gateway_config.py  test_trade_gateway_fills.py  test_trade_gateway_server.py  (+8 more)
(+370 files in other folders)
