[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xtqmt-mcp"
version = "2.0.0a0"
description = "Agent-first MCP gateways for MiniQMT and xtquant on Windows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "PyYAML>=6.0",
  "pywin32>=308; platform_system == 'Windows'",
  "requests>=2.31",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["xtqmt_mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
